Fix missing exports
Change-Id: I7dd301096b20a450a39430ed6ead3337098a7195
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/linkstate/pom.xml
+++ b/bgp/linkstate/pom.xml
@@ -131,11 +131,8 @@
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
 						<Export-Package>
                             org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.linkstate.rev130918.*,
+                            org.opendaylight.protocol.bgp.linkstate,
                         </Export-Package>
-                        <Private-Package>
-                            org.opendaylight.protocol.bgp.linkstate
-                        </Private-Package>
-                        <Activator>org.opendaylight.protocol.bgp.linkstate.LinkstateOSGiActivator</Activator>
 					</instructions>
 				</configuration>
 			</plugin>
