--- a/pcep/topology-api/pom.xml
+++ b/pcep/topology-api/pom.xml
@@ -91,6 +91,7 @@
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                         <Export-Package>
                             org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.pcep.rev131024.*,
+                            org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.topology.pcep.programming.rev131106.*,
                         </Export-Package>
                     </instructions>
                 </configuration>
