--- a/topology/api-config/pom.xml
+++ b/topology/api-config/pom.xml
@@ -71,7 +71,7 @@
                <instructions>
                   <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                   <Export-Package>
-                     org.opendaylight.controller.config.yang.pcep
+                     org.opendaylight.controller.config.yang.topology
                   </Export-Package>
                </instructions>
             </configuration>
