--- a/pcep/impl/pom.xml
+++ b/pcep/impl/pom.xml
@@ -103,9 +103,9 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-						<Private-Package>
+						<Export-Package>
 							org.opendaylight.protocol.pcep.impl.*,
-						</Private-Package>
+						</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
