--- a/programming/impl/pom.xml
+++ b/programming/impl/pom.xml
@@ -67,9 +67,9 @@
                <configuration>
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                       <Private-Package>
+                       <Export-Package>
                            org.opendaylight.bgpcep.programming.impl,
-                       </Private-Package>
+                       </Export-Package>
                    </instructions>
                </configuration>
            </plugin>
