Fixup site config
Change-Id: I0b89c2a65e719df2e521197224a1272b0d989e7e
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/concepts/pom.xml
+++ b/concepts/pom.xml
@@ -130,7 +130,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>NPS-CONCEPTS Module site</name>
+			<name>CONCEPTS Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
