--- a/util/pom.xml
+++ b/util/pom.xml
@@ -70,8 +70,8 @@
 
 	<distributionManagement>
 		<site>
-			<id>util</id>
-			<name>NPS-UTIL Module site</name>
+			<id>${project.artifactId}</id>
+			<name>UTIL Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
