Rename bgp-topology-provider package
Change-Id: Ia6378c45b0fd9dffa2bcca79138c2c7afdacff99
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/bgp/topology-provider/pom.xml
+++ b/bgp/topology-provider/pom.xml
@@ -59,7 +59,7 @@
                    <instructions>
                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                        <Export-Package>
-                           org.opendaylight.bgpcep.topology.provider.bgp
+                           org.opendaylight.bgpcep.bgp.topology.provider
                        </Export-Package>
                    </instructions>
                </configuration>
