Added tests to programming-api.
Change-Id: I8b2492a1782c8ccc9ead1324cb663649b34a6fa1
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/programming/api/pom.xml
+++ b/programming/api/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>ietf-inet-types</artifactId>
             <version>${ietf.types.version}</version>
         </dependency>
+        
+        <!-- Testing dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
