--- a/pcep/spi-config/pom.xml
+++ b/pcep/spi-config/pom.xml
@@ -1,89 +1,91 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- vi: set et smarttab sw=4 tabstop=4: -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-   <parent>
-      <groupId>org.opendaylight.bgpcep</groupId>
-      <artifactId>pcep-parent</artifactId>
-      <version>0.3.0-SNAPSHOT</version>
-   </parent>
-   <modelVersion>4.0.0</modelVersion>
-   <artifactId>pcep-spi-config</artifactId>
-   <description>PCE Protocol SPI configuration</description>
-   <packaging>bundle</packaging>
-   <name>${project.artifactId}</name>
-   <prerequisites>
-      <maven>3.0.4</maven>
-   </prerequisites>
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.opendaylight.bgpcep</groupId>
+        <artifactId>pcep-parent</artifactId>
+        <version>0.3.0-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>pcep-spi-config</artifactId>
+    <description>PCE Protocol SPI configuration</description>
+    <packaging>bundle</packaging>
+    <name>${project.artifactId}</name>
+    <prerequisites>
+        <maven>3.0.4</maven>
+    </prerequisites>
 
-   <dependencies>
-      <dependency>
-         <groupId>org.opendaylight.controller</groupId>
-         <artifactId>config-api</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>${project.groupId}</groupId>
-         <artifactId>pcep-spi</artifactId>
-      </dependency>
-   </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>config-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>pcep-spi</artifactId>
+        </dependency>
+    </dependencies>
 
-   <build>
-      <plugins>
-         <plugin>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>yang-maven-plugin</artifactId>
-            <version>${yangtools.version}</version>
-            <executions>
-               <execution>
-                  <goals>
-                     <goal>generate-sources</goal>
-                  </goals>
-                  <configuration>
-                     <codeGenerators>
-                        <generator>
-                           <codeGeneratorClass>
-                              org.opendaylight.controller.config.yangjmxgenerator.plugin.JMXGenerator
-                           </codeGeneratorClass>
-                           <outputBaseDir>${project.build.directory}/generated-sources/config</outputBaseDir>
-                           <additionalConfiguration>
-                              <namespaceToPackage1>
-                                 urn:opendaylight:params:xml:ns:yang:controller==org.opendaylight.controller.config.yang
-                              </namespaceToPackage1>
-                           </additionalConfiguration>
-                        </generator>
-                     </codeGenerators>
-                     <inspectDependencies>true</inspectDependencies>
-                  </configuration>
-               </execution>
-            </executions>
-            <dependencies>
-               <dependency>
-                  <groupId>org.opendaylight.controller</groupId>
-                  <artifactId>yang-jmx-generator-plugin</artifactId>
-                  <version>${controller.config.version}</version>
-               </dependency>
-            </dependencies>
-         </plugin>
-         <plugin>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>maven-bundle-plugin</artifactId>
-            <version>${maven.bundle.version}</version>
-            <extensions>true</extensions>
-            <configuration>
-               <instructions>
-                  <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
-                  <Export-Package>
-                     org.opendaylight.controller.config.yang.pcep.spi
-                  </Export-Package>
-               </instructions>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.opendaylight.yangtools</groupId>
+                <artifactId>yang-maven-plugin</artifactId>
+                <version>${yangtools.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate-sources</goal>
+                        </goals>
+                        <configuration>
+                            <codeGenerators>
+                                <generator>
+                                    <codeGeneratorClass>
+                                        org.opendaylight.controller.config.yangjmxgenerator.plugin.JMXGenerator
+                                    </codeGeneratorClass>
+                                    <outputBaseDir>${project.build.directory}/generated-sources/config</outputBaseDir>
+                                    <additionalConfiguration>
+                                        <namespaceToPackage1>
+                                            urn:opendaylight:params:xml:ns:yang:controller==org.opendaylight.controller.config.yang
+                                        </namespaceToPackage1>
+                                    </additionalConfiguration>
+                                </generator>
+                            </codeGenerators>
+                            <inspectDependencies>true</inspectDependencies>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.opendaylight.controller</groupId>
+                        <artifactId>yang-jmx-generator-plugin</artifactId>
+                        <version>${controller.config.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>${maven.bundle.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
+                        <Export-Package>
+                            org.opendaylight.controller.config.yang.pcep.spi
+                        </Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-   <distributionManagement>
-      <site>
-         <id>${project.artifactId}</id>
-         <name>PCEP-SPI-CONFIG Module site</name>
-         <url>${basedir}/target/site/${project.artifactId}</url>
-      </site>
-   </distributionManagement>
+    <distributionManagement>
+        <site>
+            <id>${project.artifactId}</id>
+            <name>PCEP-SPI-CONFIG Module site</name>
+            <url>${basedir}/target/site/${project.artifactId}</url>
+        </site>
+    </distributionManagement>
 </project>
