--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <controller.config.version>0.2.3-SNAPSHOT</controller.config.version>
         <yang.binding.version>0.6.0-SNAPSHOT</yang.binding.version>
         <ietf.types.version>2010.09.24.1</ietf.types.version>
+        <ietf.topology.version>2013.10.21.0-SNAPSHOT</ietf.topology.version>
     </properties>
     <prerequisites>
         <maven>3.0.4</maven>
@@ -163,6 +164,22 @@
                 <artifactId>config-api</artifactId>
                 <version>${controller.config.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>sal-binding-api</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>sal-binding-config</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.controller</groupId>
+                <artifactId>sal-binding-broker-impl</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <scope>test</scope>
+            </dependency>
 
             <!-- OSGi -->
             <dependency>
@@ -170,6 +187,38 @@
                 <artifactId>org.osgi.core</artifactId>
                 <version>${osgi.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <!-- Models -->
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-inet-types</artifactId>
+                <version>${ietf.types.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-ted</artifactId>
+                <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-topology</artifactId>
+                <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-topology-isis</artifactId>
+                <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-topology-l3-unicast-igp</artifactId>
+                <version>${ietf.topology.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opendaylight.yangtools.model</groupId>
+                <artifactId>ietf-topology-ospf</artifactId>
+                <version>${ietf.topology.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -348,7 +397,6 @@
                         </dependency>
                     </dependencies>
                 </plugin>
-
             </plugins>
         </pluginManagement>
     </build>
