Fix breakage introduced by ServiceLoader
Change-Id: I77bde499a494faf62e8f119ef4c497e90bae0422
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -27,6 +27,12 @@
 	<dependencies>
         <dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>bgp-linkstate</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>bgp-parser-mock</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
