--- a/bgp/rib-mock/pom.xml
+++ b/bgp/rib-mock/pom.xml
@@ -100,7 +100,7 @@
 	<distributionManagement>
 		<site>
 			<id>${project.artifactId}</id>
-			<name>BGP-UPDATE-MOCK Module site</name>
+			<name>BGP-RIB-MOCK Module site</name>
 			<url>${basedir}/target/site/${project.artifactId}</url>
 		</site>
 	</distributionManagement>
