BUG-110 : integration test : pcep message -> topology provider -> md sal
Change-Id: I6885e62321a7d3dd7b054e46a9f7c4ba8a29ceee
Signed-off-by: Dana Kutenicsova <dkutenic@cisco.com>

--- a/pcep/topology-provider/pom.xml
+++ b/pcep/topology-provider/pom.xml
@@ -57,6 +57,15 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>mockito-configuration</artifactId>
         </dependency>
+        <dependency>
+			<groupId>${project.groupId}</groupId>
+			<artifactId>pcep-impl</artifactId>
+			<scope>test</scope>
+		</dependency>
+        <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
