--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,9 @@
                     <target>${java.version.target}</target>
                     <testSource>${java.version.source}</testSource>
                     <testTarget>${java.version.target}</testTarget>
+                    <showDeprecation>true</showDeprecation>
+                    <showWarnings>true</showWarnings>
+                    <optimize>true</optimize>
                 </configuration>
             </plugin>
             <plugin>
