--- a/bgp/pom.xml
+++ b/bgp/pom.xml
@@ -3,8 +3,9 @@
 
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
-		<artifactId>protocol-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<artifactId>commons.parent</artifactId>
+        <version>0.3.0-SNAPSHOT</version>
+        <relativePath>../commons/parent</relativePath>
 	</parent>
 	<prerequisites>
 		<maven>3.0.4</maven>
