--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -5,8 +5,9 @@
 
 	<parent>
 		<groupId>org.opendaylight.bgpcep</groupId>
-		<artifactId>protocol-parent</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<artifactId>commons.parent</artifactId>
+        <version>0.3.0-SNAPSHOT</version>
+        <relativePath>../commons/parent</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
