--- a/bgp/rib-api-config/pom.xml
+++ b/bgp/rib-api-config/pom.xml
@@ -73,7 +73,7 @@
                     <instructions>
                         <Bundle-Name>${project.groupId}.${project.artifactId}</Bundle-Name>
                         <Export-Package>
-                            org.opendaylight.controller.config.yang.bgp.rib
+                            org.opendaylight.controller.config.yang.bgp.rib.*,
                         </Export-Package>
                     </instructions>
                 </configuration>
